--- a/frontend/index.css
+++ b/frontend/index.css
@@ -9,14 +9,13 @@
     box-sizing: border-box;
 }
 body {
-    background-color: antiquewhite;
     position: relative;
-    overflow-x: hidden
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
 }
 header {
     width: 100%;
     height: 3.5rem; 
-    background-color: var(--white);
+    background-color: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
     display: flex;
     align-items: center;
 }
@@ -67,7 +66,6 @@ nav {
     position: absolute;
     top: 0;
     right: 0; 
-    box-shadow: 0px 0px 10px var(--light-gray);
     transition: all 0.5s;
 }
 #menu-container {
@@ -108,6 +106,11 @@ nav {
 
 main {
     
+}
+#hero {
+    width: 100%;
+    height: 55vh;
+    background: url(images/campsite.jpg)  no-repeat bottom left;
 }
 footer {
     
