--- a/frontend/index.css
+++ b/frontend/index.css
@@ -9,8 +9,10 @@
     box-sizing: border-box;
 }
 body {
+    font-family: sans-serif;
     position: relative;
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+    overflow: hidden;
 }
 header {
     width: 100%;
